--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,11 @@ migrate_working_dir/
 
 # Flutter/Dart/Pub related
 # Libraries should not include pubspec.lock, per https://dart.dev/guides/libraries/private-files#pubspeclock.
-/pubspec.lock
+pubspec.lock
 **/doc/api/
 .dart_tool/
 .packages
 build/
+local.properties
+.flutter-plugins
+.flutter-pugins-dependencies
